javascript to show elements in children after loading

--- a/templates/edit_filter.html
+++ b/templates/edit_filter.html
@@ -40,6 +40,8 @@ function chainCallback() {
     {{ super() }}
     $(".operator").change(operatorCallback);
     $(".chain").change(chainCallback);
+    $(".childfieldset").show();
+    $(".childfieldset:empty").hide();
 {% endblock %}
 {% block title %}Filter Editor{% endblock %}
 {% block content %}
