--- a/templates/settings.html
+++ b/templates/settings.html
@@ -1,59 +1,7 @@
 {% extends "base.html" %}
-{% block head %}
-{{ super() }}
-<script type="text/javascript" src="{{ url_for('static', filename='jquery-1.7.1.min.js') }}"></script>
-<script type="text/javascript" id="js">
-function operatorCallback() {
-    var newval = $(this).val();
-    var myChild = $(this).parent().children('.childfieldset');
-    if (newval.indexOf("child") != -1) {
-        $.get('{{ url_for('get_filter_row') }}', function(data) {
-            myChild.html(data);
-            myChild.slideDown('medium');
-            myChild.find(".operator").change(operatorCallback);
-            myChild.find(".chain").change(chainCallback);
-        });
-    } else {
-        myChild.slideUp('medium');
-        myChild.html('');
-    }
-}
-
-function chainCallback() {
-    var newval = $(this).val();
-    var myParentDiv = $(this).parent();
-    if (newval.indexOf("null") == -1) {
-        $.get('{{ url_for('get_filter_row') }}', function(data) {
-            myParentDiv.parent().append(data);
-            myParentDiv.parent().find(".chain:last").change(chainCallback);
-            myParentDiv.parent().find(".operator:last").change(operatorCallback);
-        });
-    } else {
-        var nextDiv = myParentDiv.next();
-        while (nextDiv.length != 0) {
-            nextDiv.remove();
-            nextDiv = myParentDiv.next();
-        }
-    }
-}
-
-$(document).ready(function() {
-    $(".operator").change(operatorCallback);
-    $(".chain").change(chainCallback);
-});
-</script>
-{% endblock %}
-{% block title %}Test for filter creation{% endblock %}
+{% block title %}Settings for request['username']{% endblock %}
 {% block content %}
-<form id='filter' action = "{{ url_for('save_filter') }}" method='post'>
-    <fieldset>
-        <legend>Filter</legend>
-        <label for='title'>Title:</label><input type="text" maxlength="50" name="title" id="title" /><br />
-        <div id="filterlist">
-        {% include "filter_element.html" %}
-        </div>
-        {% if error is not none %}<br /><div class='error'>{{ error }}</div>{% endif %}
-        <input type='submit' name='submit' value='Submit' />
-    </fieldset>
-</form>
+<ul>
+<li><a href="{{ url_for('list_filters') }}">Edit Filters</a></li>
+</ul>
 {% endblock %}
