--- a/templates/view_base.html
+++ b/templates/view_base.html
@@ -69,7 +69,8 @@
                     "bInfo": false,
                     "bFilter": false,
                     "bAutoWidth": false,
-                    "aaSorting": [[ 3, "desc" ]]
+                    "aaSorting": [[ 3, "desc" ]]//,
+                    //"aoColumns": [null, null, null, {"bVisible":false}, null, null, null] //sort by numeric duration
                 } );
 
                 update_tables();
