--- a/templates/view_base.html
+++ b/templates/view_base.html
@@ -70,7 +70,7 @@
                     "bFilter": false,
                     "bAutoWidth": false,
                     "aaSorting": [[ 3, "desc" ]]//,
-                    //"aoColumns": [null, null, null, {"bVisible":false}, null, null, null] //sort by numeric duration
+                    //"aoColumns": [null, null, null, {"bVisible":false}, {"iDataSort":3}, null, null] //sort by numeric duration
                 } );
 
                 update_tables();
