human readable time

--- a/templates/table.html
+++ b/templates/table.html
@@ -5,6 +5,7 @@
                     <th>Host</th>
                     <th>Service</th>
                     <th>Status</th>
+                    <th>Duration(secs)</th>
                     <th>Duration</th>
                     <th>Attempt</th> 
                     <th>Output</th>
