--- a/templates/view_base.html
+++ b/templates/view_base.html
@@ -69,8 +69,8 @@
                     "bInfo": false,
                     "bFilter": false,
                     "bAutoWidth": false,
-                    "aaSorting": [[ 3, "desc" ]]//,
-                    //"aoColumns": [null, null, null, {"bVisible":false}, {"iDataSort":3}, null, null] //sort by numeric duration
+                    "aaSorting": [[ 3, "desc" ]],
+                    "aoColumns": [null, null, null, {"bVisible":false}, {"iDataSort":3}, null, null] //sort by numeric duration
                 } );
 
                 update_tables();
