change "no data" text

--- a/templates/view_base.html
+++ b/templates/view_base.html
@@ -70,7 +70,8 @@
                     "bFilter": false,
                     "bAutoWidth": false,
                     "aaSorting": [[ 3, "desc" ]],
-                    "aoColumns": [null, null, null, {"bVisible":false}, {"iDataSort":3}, null, null] //sort by numeric duration
+                    "aoColumns": [null, null, null, {"bVisible":false}, {"iDataSort":3}, null, null], //sort by numeric duration
+                    "oLanguage": { "sEmptyTable": "Everything's okay in this view!" }
                 } );
 
                 update_tables();
