try to fix row hilighting

--- a/static/style.css
+++ b/static/style.css
@@ -42,7 +42,7 @@ table.viewtable tbody tr.unknown td {
 table.viewtable thead tr .sorting_desc {
 	background-image: url(white_overlay.png);
 }
-table.viewtable .even {
+table.viewtable .even td {
     background-image: url(white_overlay.png);
 }
 h1.tabletitle {
