--- a/templates/list_users.html
+++ b/templates/list_users.html
@@ -5,7 +5,7 @@
     <fieldset>
         <legend>Users</legend>
         {% for user in user_list %}
-        <a href="{{ url_for('edit_user'), username=user['USER']) }}">{{ user['USER'] }}</a><input type="hidden" name="username" value="{{ user['USER'] }}" />
+        <a href="{{ url_for('edit_user', username=user['USER']) }}">{{ user['USER'] }}</a><input type="hidden" name="username" value="{{ user['USER'] }}" />
         <input type="checkbox" name="admin" value="Admin" {% if user['ADMIN'] == 1 or user['ADMIN'] == True %}checked="checked" {% endif %} />
         <input type="checkbox" name="disabled" value="Disabled" {% if user['DISABLED'] == 1 or user['DISABLED'] == True %}checked="checked" {% endif %} /><br />
         {% endfor %}
