--- a/templates/list_users.html
+++ b/templates/list_users.html
@@ -10,7 +10,7 @@
         <input type="checkbox" name="admin" value="Admin" {% if user['ADMIN'] == 1 or user['ADMIN'] == True %}checked="checked" {% endif %} />
         <input type="checkbox" name="disabled" value="Disabled" {% if user['DISABLED'] == 1 or user['DISABLED'] == True %}checked="checked" {% endif %} /><br />
         {% endfor %}
-        <input type='submit' name='Submit' value='Submit' />
+        <input type='submit' name='submit' value='Submit' />
         {% if error is not none %}<br /><div class='error'>{{ error }}</div>{% endif %}
     </fieldset>
 </form>
