--- a/templates/list_users.html
+++ b/templates/list_users.html
@@ -6,9 +6,21 @@
         <legend>Users</legend>
         {{ user_list }}
         {% for user in user_list %}
-        <a href="{{ url_for('edit_user', username=user['USER']) }}">{{ user['USER'] }}</a><input type="hidden" name="username" value="{{ user['USER'] }}" />
-        <input type="checkbox" name="admin" value="Admin" {% if user['ADMIN'] == 1 or user['ADMIN'] == True %}checked="checked" {% endif %} />
-        <input type="checkbox" name="disabled" value="Disabled" {% if user['DISABLED'] == 1 or user['DISABLED'] == True %}checked="checked" {% endif %} /><br />
+        <div class="user">
+            <a href="{{ url_for('edit_user', username=user['USER']) }}">{{ user['USER'] }}</a><input type="hidden" name="username" value="{{ user['USER'] }}" />
+        </div>
+        <div class="admin">Admin:
+            <select name="admin">
+                <option{% if user['ADMIN'] == 1 or user['ADMIN'] == "Yes" %} selected="selected"{% endif %}>Yes</option>
+                <option{% if user['ADMIN'] == 0 or user['ADMIN'] == "No" %} selected="selected"{% endif %}>No</option>
+            </select>
+        </div>
+        <div class="disabled">Disabled:
+            <select name="disabled">
+                <option{% if user['DISABLED'] == 1 or user['DISABLED'] == "Yes" %} selected="selected"{% endif %}>Yes</option>
+                <option{% if user['DISABLED'] == 0 or user['DISABLED'] == "No" %} selected="selected"{% endif %}>No</option>
+            </select>
+        </div>
         {% endfor %}
         <input type='submit' name='submit' value='Submit' />
         {% if error is not none %}<br /><div class='error'>{{ error }}</div>{% endif %}
