change password code

--- a/templates/settings.html
+++ b/templates/settings.html
@@ -3,5 +3,6 @@
 {% block content %}
 <ul>
 <li><a href="{{ url_for('list_filters') }}">Edit Filters</a></li>
+<li><a href="{{ url_for('edit_users') }}">Edit Users</a></li>
 </ul>
 {% endblock %}
