--- a/templates/base.html
+++ b/templates/base.html
@@ -12,9 +12,9 @@
             {% endblock %}
         </div>
         <div id="footer">
-            {% block footer %}
-            &copy; Copyright 2012 by <a href="http://redkrieg.com/">RedKrieg</a>.
-            {% endblock %}
+            {%- block footer -%}
+            &copy; Copyright 2012 by <a href="http://redkrieg.com/">Brandon Whaley</a>.
+            {%- endblock -%}
         </div>
     </body>
 </html>
