--- a/static/style.css
+++ b/static/style.css
@@ -24,20 +24,26 @@ table.viewtable tbody td {
 	vertical-align: top;
     font-weight: bold;
 }
-table.viewtable tbody tr.odd td {
-	background-color:#F0F0F6;
-}
 table.viewtable tbody tr.critical td {
-	background-color:#F06868;
+	background-color: #F06868;
 }
 table.viewtable tbody tr.warning td {
-	background-color:yellow;
+	background-color: yellow;
+}
+table.viewtable tbody tr.warning {
+    display: none;
 }
 table.viewtable tbody tr.ok td {
-	background-color:green;
+	background-color: green;
 }
 table.viewtable tbody tr.unknown td {
-	background-color:lightgrey;
+	background-color: lightgrey;
+}
+table.viewtable tbody tr.acknowledged td {
+    background-color: lightgrey;
+}
+table.viewtable tbody tr.acknowledged {
+    display: none;
 }
 table.viewtable thead tr th {
     margin-right: 16px;
