--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,7 @@
     <head>
         {% block head %}
         <link rel="stylesheet" href="{{ url_for('static', filename="style.css") }}" />
-        <title>{% block title %}{% endblock %} - Nag Dash</title>
+        <title>{% block title %}{% endblock %} - pynagdash</title>
         {% endblock %}
     </head>
     <body>
