--- a/templates/view_base.html
+++ b/templates/view_base.html
@@ -18,7 +18,7 @@
                 } else if($(this).text() == "UNKNOWN") {
                     $(this).parent().addClass("unknown");
                 } else if($(this).text() == "ACKNOWLEDGED") {
-                    $(this.parent().addClass("acknowledged");
+                    $(this).parent().addClass("acknowledged");
                 }
             });
 
