--- a/templates/edit_filter.html
+++ b/templates/edit_filter.html
@@ -61,7 +61,8 @@ setInterval('updateLiveFilter()',20000);
 <form id='filter' action = "{{ url_for('save_filter') }}" method='post'>
     <fieldset>
         <legend>Filter</legend>
-        <label for='title'>Title:</label><input type="text" maxlength="50" name="title" id="title" {% if title is not none %}value="{{ title }}"{% endif %} /><br />
+        <label for='title'>Title:</label><input type="text" maxlength="64" name="title" id="title" {% if title is not none %}value="{{ title }}"{% endif %} />
+        <label for='description'>Description:</label><input type="text" maxlength="512" name="description" id="description" {% if description is not none %} value="{{ description }}" {% endif %}/><br />
         <div id="filterlist">
         {% if title is not none %}
         {{ data|safe }}
