--- a/templates/edit_filter.html
+++ b/templates/edit_filter.html
@@ -77,5 +77,5 @@ setInterval('updateLiveFilter()',20000);
 {{ super() }}
 {% endblock %}
 {% block views %}
-            {% set view = { 'api_url': url_for('api_filter', filter='liveeditor'), 'title': "Live Editor" } %}{% include "table.html" %}
+            {% set view = { 'api_url': url_for('api_filter', filter='%s-liveeditor' % session['username']), 'title': "Live Editor" } %}{% include "table.html" %}
 {% endblock %}
