--- a/templates/edit_filter.html
+++ b/templates/edit_filter.html
@@ -40,7 +40,7 @@ function chainCallback() {
 
 function updateLiveFilter() {
     var filtername = $('#title').val();
-    $('#title').val('liveeditor');
+    $('#title').val('{{ session['username'] }}liveeditor');
     var data = $("#filter").serialize();
     $('#title').val(filtername);
     $.post('{{ url_for('save_filter') }}', data);
