--- a/templates/table.html
+++ b/templates/table.html
@@ -1,4 +1,4 @@
-        <h1 class="tabletitle">{{ view["title"] }}</h1>
+        <h1 class="tabletitle">{{ description if description is not none else get_description(view) }}</h1>
         <table cellspacing="1" class="viewtable">
             <thead>
                 <tr>
@@ -11,7 +11,7 @@
                     <th>Output</th>
                 </tr>
             </thead>
-            <tbody data-source='{{ view["api_url"] }}'>
+            <tbody data-source='{{ url_for('api_json', filter=view) }}'>
             </tbody>
         </table>
 
