--- a/templates/list_filters.html
+++ b/templates/list_filters.html
@@ -7,7 +7,7 @@
         {% for filter in filter_list %}
         <div class="filter">
             <div class="filtername">
-                <input type="checkbox" {% if filter['NAME'] in session['views'] %}checked = "checked" {% endif %}name="{{ filter['NAME'] }}" value='<a href="{{ url_for('edit_filter', filtername = filter['NAME']) }}">{{ filter['NAME'] }}</a>' />:
+                <input type="checkbox" {% if filter['NAME'] in session['views'] %}checked = "checked" {% endif %}name="{{ filter['NAME'] }}" value="{{ filter['NAME'] }}" /><a href="{{ url_for('edit_filter', filtername = filter['NAME']) }}">{{ filter['NAME'] }}</a>:
             </div>
             <div class="filterdesc">
                 {{- filter['DESCRIPTION'] -}}
