use filter api instead of raw json data

--- a/templates/table.html
+++ b/templates/table.html
@@ -11,7 +11,7 @@
                     <th>Output</th>
                 </tr>
             </thead>
-            <tbody data-source='{{ url_for('api_json', filter=view) }}'>
+            <tbody data-source='{{ url_for('api_filter', filter=view) }}'>
             </tbody>
         </table>
 
