yay more debugging

--- a/templates/table.html
+++ b/templates/table.html
@@ -1,4 +1,4 @@
-        <h1 class="tabletitle">{{ description if description is not none else get_description(view) }}</h1>
+        <h1 class="tabletitle">{{ description }}</h1>
         <table cellspacing="1" class="viewtable">
             <thead>
                 <tr>
