--- a/static/style.css
+++ b/static/style.css
@@ -77,28 +77,28 @@ h1.tabletitle {
 a:hover {
     text-decoration: underline;
 }
-/* login */
-#login {
+/* form */
+form {
     text-align: center;
 }
-#login fieldset {
+form fieldset {
     border-radius: 5;
     display: inline-block;
     text-align: left;
     background-color: #D0E0F0
 }
-#login fieldset label {
+form fieldset label {
     text-align: right;
     margin-right: 1em;
     width: 4em;
     float: left;
     display: block;
 }
-#login fieldset input {
-    text-align: right;
+form fieldset input {
+    text-align: left;
     margin-left: 1em;
 }
-#login fieldset legend {
+form fieldset legend {
     border-radius: 5;
     border: 2px groove threedface;
     background-color: #A0C0F0;
