--- a/templates/view_base.html
+++ b/templates/view_base.html
@@ -78,7 +78,7 @@
                     "bInfo": false,
                     "bFilter": false,
                     "bAutoWidth": false,
-                    "aaSorting": [[ 3, "desc" ]],
+                    "aaSorting": [[ 2, "asc" ], [ 3, "desc" ]],
                     "aoColumns": [null, null, null, {"bVisible":false}, {"iDataSort":3}, null, null], //sort by numeric duration
                     "oLanguage": { "sEmptyTable": "Everything's okay in this view!" }
                 } );
