--- a/templates/view_base.html
+++ b/templates/view_base.html
@@ -78,8 +78,8 @@
                     "bInfo": false,
                     "bFilter": false,
                     "bAutoWidth": false,
-                    "aaSorting": [[ 2, "asc" ], [ 3, "desc" ]],
-                    "aoColumns": [null, null, null, {"bVisible":false}, {"iDataSort":3}, null, null], //sort by numeric duration
+                    "aoColumns": [null, null, null, {"bVisible":false}, {"iDataSort":3}, null, null],
+                    "aaSorting": [[ 2, "asc" ], [ 4, "desc" ]],
                     "oLanguage": { "sEmptyTable": "Everything's okay in this view!" }
                 } );
 
