--- a/templates/view_base.html
+++ b/templates/view_base.html
@@ -78,7 +78,7 @@
                     "bInfo": false,
                     "bFilter": false,
                     "bAutoWidth": false,
-                    "aoColumns": [null, null, null, {"bVisible":false}, {"iDataSort":3}, null, {"sWidth":50%}],
+                    "aoColumns": [null, null, null, {"bVisible":false}, {"iDataSort":3}, null, {"sWidth":"50%"}],
                     "aaSorting": [[ 2, "asc" ], [ 4, "desc" ]],
                     "oLanguage": { "sEmptyTable": "Everything's okay in this view!" }
                 } );
