forgot to add the flapping class

--- a/templates/view_base.html
+++ b/templates/view_base.html
@@ -69,7 +69,7 @@
             }
 
             function animate_flap() {
-                $(".flapping img").fadeToggle('fast');
+                $(".flapping").fadeToggle('fast');
             }
 
             $(document).ready(function() {
