style changes to keep output on one row

--- a/templates/view_base.html
+++ b/templates/view_base.html
@@ -82,7 +82,7 @@
                     "bInfo": false,
                     "bFilter": false,
                     "bAutoWidth": false,
-                    "aoColumns": [null, null, null, {"bVisible":false}, {"iDataSort":3}, null, {"sWidth":"50%"}],
+                    "aoColumns": [null, {"sWidth":"18%", null, {"bVisible":false}, {"iDataSort":3}, {"sWidth":"6%"}, {"sWidth":"50%"}],
                     "aaSorting": [[ 2, "asc" ], [ 4, "desc" ]],
                     "oLanguage": { "sEmptyTable": "Everything's okay in this view!" }
                 } );
