--- a/static/style.css
+++ b/static/style.css
@@ -6,6 +6,8 @@ table.viewtable {
 	font-size: 12pt;
 	width: 100%;
 	text-align: left;
+    white-space: nowrap;
+    table-layout: fixed;
 }
 table.viewtable thead tr th, table.viewtable tfoot tr th {
 	background-color: #e6EEEE;
@@ -23,6 +25,8 @@ table.viewtable tbody td {
 	background-color: #FFF;
 	vertical-align: top;
     font-weight: bold;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 table.viewtable tbody tr.critical td {
 	background-color: #F06868;
