try truncating just the data in the output column

--- a/static/style.css
+++ b/static/style.css
@@ -25,6 +25,8 @@ table.viewtable tbody td {
 	background-color: #FFF;
 	vertical-align: top;
     font-weight: bold;
+}
+table.viewtable tbody td.truncated {
     overflow: hidden;
     text-overflow: ellipsis;
 }
