--- a/templates/view_base.html
+++ b/templates/view_base.html
@@ -64,6 +64,8 @@
                 $('.viewtable').each(function() {
                     update_table(this);
                 });
+
+                $('.viewtable tr td').filter('td:last-child').addClass('truncated');
                 return false;
 
             }
