--- a/templates/view_base.html
+++ b/templates/view_base.html
@@ -44,7 +44,6 @@
                 rTable.fnAddData(data);
                 set_color_classes(table);
                 $(table).find('td').filter('td:last-child').addClass('truncated');
-                resize_output_column();
 
                 return false;
 
@@ -75,11 +74,6 @@
                 $(".flapping").fadeToggle('fast');
             }
 
-            function resize_output_column() {
-                var targetWidth = $(window).width() / 2 - 50;
-                $('.viewtable').find('th').filter('th:last-child').width(targetWidth);
-            }
-
             $(document).ready(function() {
                 {% block js_document_ready %}
                 $('#msgBox div').hide();
@@ -90,14 +84,10 @@
                     "bInfo": false,
                     "bFilter": false,
                     "bAutoWidth": false,
-                    "aoColumns": [null, null, null, {"bVisible":false}, {"iDataSort":3}, null, null],
+                    "aoColumns": [null, null, null, {"bVisible":false}, {"iDataSort":3}, null, {"sWidth":"50%"}],
                     "aaSorting": [[ 2, "asc" ], [ 4, "desc" ]],
                     "oLanguage": { "sEmptyTable": "Everything's okay in this view!" }
                 } );
-
-                $(window).resize(function() {
-                    resize_output_column();
-                });
 
                 update_tables();
                 setInterval('update_tables()',10000);
