make user listing more user friendly

--- a/static/style.css
+++ b/static/style.css
@@ -193,3 +193,13 @@ form fieldset legend {
 .childfieldset {
     display: none;
 }
+/* user listing */
+div.user {
+    display: inline;
+}
+div.admin {
+    display: inline;
+}
+div.disabled {
+    display: inline;
+}
