--- a/templates/list_filters.html
+++ b/templates/list_filters.html
@@ -11,7 +11,7 @@ $(function() {
     }).disableSelection();
 });
 </script>
-{% endblock %)
+{% endblock %}
 {% block content %}
 <form id = 'filterlist' action = "{{ url_for('list_filters') }}" method='post'>
     <fieldset>
