--- a/templates/list_filters.html
+++ b/templates/list_filters.html
@@ -12,7 +12,9 @@ $(function() {
 });
 
 $("#saveviews").click(function() {
-    $.post('{{ url_for('test_filter') }}', { 'views': $.makeArray($("#myviews li a")) }, function(data) { alert("Data: " + data); }).success(function() { alert("success"); }).error(function() { alert("error"); });
+    var filterNames = [];
+    $("#myviews li a").each(function(i) { filterNames.push($(this).text()); });
+    $.post('{{ url_for('test_filter') }}', { 'views': filterNames }, function(data) { alert("Data: " + data); }).success(function() { alert("success"); }).error(function() { alert("error"); });
 });
 </script>
 {% endblock %}
