--- a/templates/list_filters.html
+++ b/templates/list_filters.html
@@ -14,8 +14,33 @@ $(document).ready(function() {
 
     $("#saveviews").click(function() {
         var filterNames = [];
-        $("#myviews li a").each(function(i) { filterNames.push($(this).text()); });
-        $.post('{{ url_for('list_filters') }}', { 'views': filterNames }, function(data) { alert("Data: " + data); }).success(function() { alert("success"); }).error(function() { alert("error"); });
+        $("#myviews li").each(function(i) {
+            filterNames.push({
+                'NAME': $(this).find('a').text(),
+                'DESCRIPTION': $(this).find('.filterdesc').text()
+            });
+        });
+        $.post('{{ url_for('list_filters') }}', { 'views': filterNames }, function(data) {
+            if ( data.indexOf("success") == -1 ) {
+                $('#msgBox div').text("Couldn't update filters!  Check login and the backend!")
+                    .slideDown('medium')
+                    .delay(3000)
+                    .slideUp('medium');
+            } else {
+                $('#msgBox div').addClass("success")
+                    .text("Saved your filters!")
+                    .slideDown('medium')
+                    .delay(3000)
+                    .slideUp('medium')
+                    .removeClass("success");
+            }
+        }).error(function() {
+
+            $('#msgBox div').text("Couldn't update filters!  Check login and the backend!")
+                .slideDown('medium')
+                .delay(3000)
+                .slideUp('medium');
+        });;
     });
 });
 </script>
@@ -39,33 +64,37 @@ $(document).ready(function() {
     </fieldset>
 </form>
 Incomplete, do not use:
-<ul id="availableviews" class="connectedSortable">
-    {% for filter in filter_list %}
-    {% if filter['NAME'] not in session['views'] %}
-    <li class="filter">
-        <div class="filtername">
-            <a href="{{ url_for('edit_filter', filtername = filter['NAME']) }}">{{ filter['NAME'] }}</a>
-        </div>
-        <div class="filterdesc">
-            {{- filter['DESCRIPTION'] -}}
-        </div>
-    </li>
-    {% endif %}
-    {% endfor %}
-</ul>
-<ul id="myviews" class="connectedSortable">
-    {% for filter in filter_list %}
-    {% if filter['NAME'] in session['views'] %}
-    <li class="filter">
-        <div class="filtername">
-            <a href="{{ url_for('edit_filter', filtername = filter['NAME']) }}">{{ filter['NAME'] }}</a>
-        </div>
-        <div class="filterdesc">
-            {{- filter['DESCRIPTION'] -}}
-        </div>
-    </li>
-    {% endif %}
-    {% endfor %}
-</ul>
+<div class="viewselect">
+    <ul id="availableviews" class="connectedSortable">
+        {% for filter in filter_list %}
+        {% if filter['NAME'] not in session['views'] %}
+        <li class="filter">
+            <div class="filtername">
+                <a href="{{ url_for('edit_filter', filtername = filter['NAME']) }}">{{ filter['NAME'] }}</a>
+            </div>
+            <div class="filterdesc">
+                {{- filter['DESCRIPTION'] -}}
+            </div>
+        </li>
+        {% endif %}
+        {% endfor %}
+    </ul>
+</div>
+<div class="viewselect">
+    <ul id="myviews" class="connectedSortable">
+        {% for filter in filter_list %}
+        {% if filter['NAME'] in session['views'] %}
+        <li class="filter">
+            <div class="filtername">
+                <a href="{{ url_for('edit_filter', filtername = filter['NAME']) }}">{{ filter['NAME'] }}</a>
+            </div>
+            <div class="filterdesc">
+                {{- filter['DESCRIPTION'] -}}
+            </div>
+        </li>
+        {% endif %}
+        {% endfor %}
+    </ul>
+</div>
 <a href="#" id="saveviews">Save views</a>
 {% endblock %}
