--- a/static/style.css
+++ b/static/style.css
@@ -206,3 +206,21 @@ div.disabled {
     display: inline-block;
     width: 8em;
 }
+/* view selector */
+.viewselect {
+    display: inline-block;
+    width: 40%;
+}
+.viewselect ul {
+    border: 2px groove threedface;
+    min-height: 50px;
+    min-width: 50px;
+    border-radius: 5px;
+    padding-right: 2em;
+    padding-top: 1em;
+    padding-bottom: 0.5em;
+    list-style: none;
+}
+.viewselect ul li {
+    border: 2px groove threedface;
+}
