--- a/static/style.css
+++ b/static/style.css
@@ -216,9 +216,7 @@ div.disabled {
     min-height: 50px;
     min-width: 50px;
     border-radius: 5px;
-    padding-right: 2em;
-    padding-top: 1em;
-    padding-bottom: 0.5em;
+    padding-left: 0;
     list-style: none;
 }
 .viewselect ul li {
