--- a/templates/table.html
+++ b/templates/table.html
@@ -11,6 +11,10 @@
                     <th>Output</th>
                 </tr>
             </thead>
-            <tbody data-source='{{ url_for('api_filter', filter=view) }}'>
+            {% if 'filter' in api_func %}
+            <tbody data-source='{{ url_for(api_func, filter=view) }}'>
+            {% else %}
+            <tbody data-source='{{ url_for(api_func) }}'>
+            {% endif %}
             </tbody>
         </table>
