--- a/templates/view_base.html
+++ b/templates/view_base.html
@@ -43,7 +43,7 @@
                 rTable.fnClearTable();
                 rTable.fnAddData(data);
                 set_color_classes(table);
-                var lastChildren = $(table).find('td').filter('td:last-child');
+                var lastChildren = $(table).find('td');
                 lastChildren.addClass('truncated');
                 lastChildren.each(function() {
                     $(this).attr("title", $(this).text());
