enable filter box

--- a/templates/view_base.html
+++ b/templates/view_base.html
@@ -86,7 +86,7 @@
                     "bPaginate": false,
                     "bLengthChange": true,
                     "bInfo": false,
-                    "bFilter": false,
+                    "bFilter": true,
                     "bAutoWidth": false,
                     "aoColumns": [null, null, null, {"bVisible":false}, {"iDataSort":3}, null, {"sWidth":"50%"}],
                     "aaSorting": [[ 2, "asc" ], [ 4, "desc" ]],
